# Blackpill_Testbench_Zephyr

./: .gitignore  LICENSE  PROJECT_TASKS.md  README.md
docs/: Architecture.md  Hardware_Pinout.md  Protocol_Spec.md  README.md  Requirements.md
firmware/: CMakeLists.txt  README.md  app.overlay  prj.conf
firmware/src/: main.c  tb_shell.c
host/: README.md  pyproject.toml
host/blackpill_testbench/: __init__.py  client.py
host/examples/: basic_usage.py
scripts/: create_github_issues.sh
tests/: README.md  TestbenchLibrary.py  smoke.robot
